Bug 476923 - NeoChat crash when selecting a chat
Summary: NeoChat crash when selecting a chat
Status: RESOLVED FIXED
Alias: None
Product: NeoChat
Classification: Applications
Component: General (other bugs)
Version First Reported In: 23.08.3
Platform: Arch Linux Linux
: NOR crash
Target Milestone: ---
Assignee: Tobias Fella
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2023-11-13 06:36 UTC by Hirad
Modified: 2023-11-24 15:44 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Hirad 2023-11-13 06:36:54 UTC
Application: neochat (23.08.3)

Qt Version: 5.15.11
Frameworks Version: 5.112.0
Operating System: Linux 6.6.1-arch1-1 x86_64
Windowing System: Wayland
Distribution: "Arch Linux"
DrKonqi: 5.27.9 [KCrashBackend]

-- Information about the crash:
Using Arch Linux, as soon as selecting a chat to open, neochat crashes.

The crash can be reproduced every time.

-- Backtrace:
Application: NeoChat (neochat), signal: Segmentation fault
Content of s_kcrashErrorMessage: std::unique_ptr<char []> = {get() = <optimized out>}
[KCrash Handler]
#6  Quotient::RoomStateView::RoomStateView(Quotient::RoomStateView const&) (this=0x7ffe142ceeb8) at /usr/src/debug/libquotient/libQuotient-0.8.1.2/Quotient/roomstateview.h:24
#7  Quotient::Room::currentState() const (this=this@entry=0x0) at /usr/src/debug/libquotient/libQuotient-0.8.1.2/Quotient/room.cpp:1574
#8  0x000055b13d56ad37 in ImagePacksModel::reloadImages() (this=this@entry=0x55b141521180) at /usr/src/debug/neochat/neochat-23.08.3/src/models/imagepacksmodel.cpp:105
#9  0x000055b13d56c392 in ImagePacksModel::setRoom(NeoChatRoom*) (room=<optimized out>, this=0x55b141521180) at /usr/src/debug/neochat/neochat-23.08.3/src/models/imagepacksmodel.cpp:73
#10 ImagePacksModel::qt_static_metacall(QObject*, QMetaObject::Call, int, void**) (_o=0x55b141521180, _c=<optimized out>, _id=<optimized out>, _a=<optimized out>) at /usr/src/debug/neochat/build/src/neochat_autogen/include/moc_imagepacksmodel.cpp:167
#11 0x000055b13d56c5a3 in ImagePacksModel::qt_metacall(QMetaObject::Call, int, void**) (this=0x55b141521180, _c=QMetaObject::WriteProperty, _id=0, _a=0x7ffe142cf0a0) at /usr/src/debug/neochat/build/src/neochat_autogen/include/moc_imagepacksmodel.cpp:218
#12 0x00007fbb93e3c00e in QQmlPropertyData::writeProperty(QObject*, void*, QFlags<QQmlPropertyData::WriteFlag>) const (this=<optimized out>, target=<optimized out>, value=<optimized out>, flags=...) at ../../include/QtQml/5.15.11/QtQml/private/../../../../../../qtdeclarative/src/qml/qml/qqmlpropertydata_p.h:393
#13 0x00007fbb93e99488 in QObjectPointerBinding::write(QV4::Value const&, bool, QFlags<QQmlPropertyData::WriteFlag>) (this=0x55b1415212e0, result=..., isUndefined=<optimized out>, flags=...) at /usr/src/debug/qt5-declarative/qtdeclarative/src/qml/qml/qqmlbinding.cpp:744
#14 0x00007fbb93ea064e in QQmlNonbindingBinding::doUpdate(QQmlJavaScriptExpression::DeleteWatcher const&, QFlags<QQmlPropertyData::WriteFlag>, QV4::Scope&) (this=0x55b1415212e0, watcher=..., flags=..., scope=<optimized out>) at /usr/src/debug/qt5-declarative/qtdeclarative/src/qml/qml/qqmlbinding.cpp:258
#15 0x00007fbb93ea0133 in QQmlBinding::update(QFlags<QQmlPropertyData::WriteFlag>) (this=0x55b1415212e0, flags=...) at /usr/src/debug/qt5-declarative/qtdeclarative/src/qml/qml/qqmlbinding.cpp:194
#16 0x00007fbb93ea47dd in QQmlObjectCreator::finalize(QQmlInstantiationInterrupt&) (this=0x55b1408d9c20, interrupt=...) at /usr/src/debug/qt5-declarative/qtdeclarative/src/qml/qml/qqmlobjectcreator.cpp:1404
#17 0x00007fbb93e506e7 in QQmlIncubatorPrivate::incubate(QQmlInstantiationInterrupt&) (this=this@entry=0x55b140fe9750, i=...) at /usr/include/qt/QtCore/qscopedpointer.h:116
#18 0x00007fbb93e51096 in QQmlEnginePrivate::incubate(QQmlIncubator&, QQmlContextData*) (this=0x55b13e9dde70, i=<optimized out>, forContext=<optimized out>) at /usr/src/debug/qt5-declarative/qtdeclarative/src/qml/qml/qqmlincubator.cpp:89
#19 0x00007fbb93e4a004 in QQmlComponent::create(QQmlIncubator&, QQmlContext*, QQmlContext*) (this=<optimized out>, incubator=..., context=<optimized out>, forContext=forContext@entry=0x0) at /usr/src/debug/qt5-declarative/qtdeclarative/src/qml/qml/qqmlcomponent.cpp:1191
#20 0x00007fbb944c231b in QQuickLoaderPrivate::_q_sourceLoaded() (this=0x55b141293830) at /usr/src/debug/qt5-declarative/qtdeclarative/src/quick/items/qquickloader.cpp:750
#21 0x00007fbb93ea4921 in QQmlObjectCreator::finalize(QQmlInstantiationInterrupt&) (this=0x55b13fb42ea0, interrupt=...) at /usr/src/debug/qt5-declarative/qtdeclarative/src/qml/qml/qqmlobjectcreator.cpp:1424
#22 0x00007fbb93e499fd in QQmlComponentPrivate::complete(QQmlEnginePrivate*, QQmlComponentPrivate::ConstructionState*) (state=0x55b140e2ce58, enginePriv=0x55b13e9dde70) at /usr/include/qt/QtCore/qscopedpointer.h:116
#23 QQmlComponentPrivate::complete(QQmlEnginePrivate*, QQmlComponentPrivate::ConstructionState*) (enginePriv=0x55b13e9dde70, state=state@entry=0x55b140e2ce58) at /usr/src/debug/qt5-declarative/qtdeclarative/src/qml/qml/qqmlcomponent.cpp:996
#24 0x00007fbb93e49bcb in QQmlComponentPrivate::completeCreate() (this=this@entry=0x55b140e2cdd0) at /usr/src/debug/qt5-declarative/qtdeclarative/src/qml/qml/qqmlcomponent.cpp:1092
#25 0x00007fbb93e4a494 in QQmlComponent::createObject(QQmlV4Function*) (this=<optimized out>, args=0x7ffe142cf940) at /usr/src/debug/qt5-declarative/qtdeclarative/src/qml/qml/qqmlcomponent.cpp:1506
#26 0x00007fbb93e4e493 in QQmlComponent::qt_metacall(QMetaObject::Call, int, void**) (this=0x55b13f2843d0, _c=QMetaObject::InvokeMetaMethod, _id=6, _a=0x7ffe142cf960) at .moc/moc_qqmlcomponent.cpp:231
#27 0x00007fbb93e7cf54 in QQmlObjectOrGadget::metacall(QMetaObject::Call, int, void**) const (this=0x7ffe142cf8a0, type=QMetaObject::InvokeMetaMethod, index=<optimized out>, argv=<optimized out>) at /usr/src/debug/qt5-declarative/qtdeclarative/src/qml/qml/qqmlobjectorgadget.cpp:51
#28 0x00007fbb93d80436 in QV4::QObjectMethod::callInternal(QV4::Value const*, QV4::Value const*, int) const (this=<optimized out>, thisObject=0x7fbb673bf958, argv=<optimized out>, argc=<optimized out>) at /usr/src/debug/qt5-declarative/qtdeclarative/src/qml/jsruntime/qv4qobjectwrapper.cpp:2109
#29 0x00007fbb93da2bee in QV4::FunctionObject::call(QV4::Value const*, QV4::Value const*, int) const (argc=2, argv=0x7fbb673bf970, thisObject=0x7fbb673bf958, this=0x7ffe142cf9e8) at /usr/src/debug/qt5-declarative/qtdeclarative/src/qml/jsruntime/qv4functionobject_p.h:202
#30 QV4::Runtime::CallPropertyLookup::call(QV4::ExecutionEngine*, QV4::Value const&, unsigned int, QV4::Value*, int) (engine=0x55b13eaab230, base=..., index=<optimized out>, argv=0x7fbb673bf970, argc=2) at /usr/src/debug/qt5-declarative/qtdeclarative/src/qml/jsruntime/qv4runtime.cpp:1460
#31 0x00007fbb540a5160 in  ()
#32 0x00007ffe142cfc20 in  ()
#33 0x000055b14104c020 in  ()
#34 0x00007fbb673bf910 in  ()
#35 0x0000000000000000 in  ()
[Inferior 1 (process 19117) detached]

Reported using DrKonqi
Comment 1 Tobias Fella 2023-11-24 15:44:28 UTC
Git commit dd6eaac5568354885c0a6e4debe1431eaddc20a2 by Tobias Fella.
Committed on 24/11/2023 at 16:43.
Pushed by tfella into branch 'master'.

Don't crash when sticker pack room doesn't exist

M  +3    -0    src/models/imagepacksmodel.cpp

https://invent.kde.org/network/neochat/-/commit/dd6eaac5568354885c0a6e4debe1431eaddc20a2