Don't crash when sticker pack room doesn't exist

BUG: 476923